[gd_scene load_steps=24 format=3 uid="uid://bf2m1fgi6jrhx"]

[ext_resource type="Script" path="res://Scripts/schwererRitter.gd" id="1_78fo0"]
[ext_resource type="Texture2D" uid="uid://c8ixhilksq4wb" path="res://Assets/icon.svg" id="2_6u8t4"]
[ext_resource type="Texture2D" uid="uid://d4edfw3tec544" path="res://Assets/HeavyKnight.webp" id="3_gxi03"]
[ext_resource type="PackedScene" uid="uid://dshfmgyulrshs" path="res://Scenes/detection_area.tscn" id="4_5mq2o"]
[ext_resource type="PackedScene" uid="uid://7e0odiarlhle" path="res://Scenes/hurtBox.tscn" id="5_gfh71"]
[ext_resource type="PackedScene" uid="uid://cvcgtb6nd37pw" path="res://Scenes/healthComponent.tscn" id="6_8b6d7"]
[ext_resource type="PackedScene" uid="uid://did1lmobv5wea" path="res://Scenes/hitBox.tscn" id="6_aea5c"]
[ext_resource type="PackedScene" uid="uid://cr4fvx58qf0wg" path="res://Scenes/move_to_player.tscn" id="7_2ytm3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_16ucu"]
atlas = ExtResource("2_6u8t4")
region = Rect2(0, 90, 70, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_32t3x"]
atlas = ExtResource("2_6u8t4")
region = Rect2(70, 90, 70, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_m72e4"]
atlas = ExtResource("2_6u8t4")
region = Rect2(140, 90, 70, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_n88gh"]
atlas = ExtResource("2_6u8t4")
region = Rect2(210, 90, 70, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_tcdcd"]
atlas = ExtResource("2_6u8t4")
region = Rect2(280, 90, 70, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ymwa"]
atlas = ExtResource("2_6u8t4")
region = Rect2(350, 90, 70, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_5biuf"]
atlas = ExtResource("2_6u8t4")
region = Rect2(420, 90, 70, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_puune"]
atlas = ExtResource("2_6u8t4")
region = Rect2(490, 90, 70, 90)

[sub_resource type="SpriteFrames" id="SpriteFrames_fwnc0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_16ucu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_32t3x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m72e4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n88gh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tcdcd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ymwa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5biuf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_puune")
}],
"loop": true,
"name": &"Gehen",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_gxi03")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_26i5y"]
radius = 15.0

[sub_resource type="CircleShape2D" id="CircleShape2D_y66rm"]
radius = 181.025

[sub_resource type="CircleShape2D" id="CircleShape2D_5unud"]
radius = 14.0

[sub_resource type="CircleShape2D" id="CircleShape2D_p28h2"]
radius = 34.0

[sub_resource type="CircleShape2D" id="CircleShape2D_y6wat"]
radius = 16.2788

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hlarf"]
radius = 6.0
height = 40.0

[node name="schwerer_ritter" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 4
script = ExtResource("1_78fo0")
max_speed = 200

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-7, 0)
sprite_frames = SubResource("SpriteFrames_fwnc0")
animation = &"idle"
autoplay = "idle"

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_26i5y")

[node name="DetectionArea" parent="." groups=["Enemy"] instance=ExtResource("4_5mq2o")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_y66rm")

[node name="HurtBox" parent="." node_paths=PackedStringArray("healthComponent") instance=ExtResource("5_gfh71")]
collision_layer = 5
healthComponent = NodePath("../healthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("CircleShape2D_5unud")

[node name="healthComponent" parent="." instance=ExtResource("6_8b6d7")]

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="AttackArea" parent="." instance=ExtResource("4_5mq2o")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_p28h2")

[node name="CloseArea" parent="." instance=ExtResource("4_5mq2o")]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="CloseArea"]
shape = SubResource("CircleShape2D_y6wat")

[node name="Node2D" type="Node2D" parent="."]

[node name="HitBox" parent="Node2D" instance=ExtResource("6_aea5c")]
collision_mask = 2
dmg = 20.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/HitBox"]
position = Vector2(24, 0)
shape = SubResource("CapsuleShape2D_hlarf")
disabled = true

[node name="durationTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="MoveToPlayer" parent="." instance=ExtResource("7_2ytm3")]

[connection signal="timeout" from="durationTimer" to="." method="_on_duration_timer_timeout"]
